--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,9 +2,9 @@
 # for backend testing & running
 tasks:
   - init: |
-      cd src/backend
+      cd src/backend/merger
       sudo apt install qpdf -y
       go get && go build -o backend && go test ./...
     command: |
-      cd src/backend
+      cd src/backend/merger
       ./backend
