--- a/src/backend/rotator/Dockerfile
+++ b/src/backend/rotator/Dockerfile
@@ -4,16 +4,16 @@ WORKDIR /go/src
 COPY . .
 RUN rm -rf uploads/
 RUN go get -d
-RUN go build -o merger-executable
+RUN go build -o rotator-executable
 
 FROM alpine:3.16.1 as prod
 RUN apk add qpdf
 LABEL MAINTAINER="Dipankar Das <dipankardas0115@gmail.com>"
 WORKDIR /go/src
-COPY --from=prod-stage1 /go/src .
-CMD ["./merger-executable"]
-# EXPOSE ${PORT}
-EXPOSE 8080
+COPY --from=prod-stage1 /go/src/templates .
+COPY --from=prod-stage1 /go/src/rotator-executable .
+CMD ["./rotator-executable"]
+EXPOSE 8081
 
 FROM golang:1.18-alpine as dev
 RUN apk update
