--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -23,7 +23,7 @@ jobs:
         cd src/backend/merger
         go build -v ./...
 
-    - name: Test
+    - name: 🧪 backend merger
       run: |
         cd src/backend/merger
         go test -v ./...
@@ -44,7 +44,7 @@ jobs:
         cd src/frontend
         npm install
 
-    - name: testing
+    - name: 🧪 frontend
       env:
         PORT: 8080
       run: |
@@ -92,6 +92,10 @@ jobs:
 
     env:
       SUPER_SECRET: ${{ secrets.DOCKER_PASS }}
+      BACKEND_MERGE: dipugodocker/pdf-editor:backend-merge
+      BACKEND_DATABASE: dipugodocker/pdf-editor:backend-db
+      BACKEND_ROTATE: dipugodocker/pdf-editor:backend-rotate
+      FRONTEND: dipugodocker/pdf-editor:frontend
 
     name: Install Cosign and test presence in path
     steps:
@@ -107,29 +111,31 @@ jobs:
           cosign version
           docker login -u dipugodocker -p "$SUPER_SECRET"
 
-      - name: build backend
+      - name: build all 🏭 Images
         run: |
-          cd src/backend/merger
-          docker build --target prod -t docker.io/dipugodocker/pdf-editor:backend .
-
-      - name: build frontend
-        run: |
-          cd src/frontend
-          docker build --target prod -t docker.io/dipugodocker/pdf-editor:frontend .
+          chmod +x build.sh
+          ./build.sh 0
 
       - name: sign
         run: |
-          echo -n "${{secrets.COSIGNPASSWORD}}" | cosign sign --key cosign.key -a git_sha=$GITHUB_SHA docker.io/dipugodocker/pdf-editor:frontend
-          echo -n "${{secrets.COSIGNPASSWORD}}" | cosign sign --key cosign.key -a git_sha=$GITHUB_SHA docker.io/dipugodocker/pdf-editor:backend
+          echo -n "${{secrets.COSIGNPASSWORD}}" | cosign sign --key cosign.key -a git_sha=$GITHUB_SHA $FRONTEND
+          echo -n "${{secrets.COSIGNPASSWORD}}" | cosign sign --key cosign.key -a git_sha=$GITHUB_SHA $BACKEND_MERGE
+          echo -n "${{secrets.COSIGNPASSWORD}}" | cosign sign --key cosign.key -a git_sha=$GITHUB_SHA $BACKEND_ROTATE
+          echo -n "${{secrets.COSIGNPASSWORD}}" | cosign sign --key cosign.key -a git_sha=$GITHUB_SHA $BACKEND_DATABASE
 
       - name: verify
         run: |
           echo "Frontend Verify"
-          cosign verify --key cosign.pub -a git_sha=$GITHUB_SHA docker.io/dipugodocker/pdf-editor:frontend | jq .
-          echo "Backend Verify"
-          cosign verify --key cosign.pub -a git_sha=$GITHUB_SHA docker.io/dipugodocker/pdf-editor:backend | jq .
-          docker push docker.io/dipugodocker/pdf-editor:backend
-          docker push docker.io/dipugodocker/pdf-editor:frontend
+          cosign verify --key cosign.pub -a git_sha=$GITHUB_SHA $FRONTEND | jq .
+          echo "Backend images Verify"
+          cosign verify --key cosign.pub -a git_sha=$GITHUB_SHA $BACKEND_DATABASE | jq .
+          cosign verify --key cosign.pub -a git_sha=$GITHUB_SHA $BACKEND_MERGE | jq .
+          cosign verify --key cosign.pub -a git_sha=$GITHUB_SHA $BACKEND_ROTATE | jq .
+
+          docker push $BACKEND_DATABASE
+          docker push $BACKEND_MERGE
+          docker push $BACKEND_ROTATE
+          docker push $FRONTEND
 
 # docker build . --file Dockerfile --tag dipugodocker/pdf-editor:0.$(($(date +%m) + 1))-rc
 # docker push dipugodocker/pdf-editor:0.$(($(date +%m) + 1))-rc
