--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -42,7 +42,7 @@
 #       with:
 #         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
-name: 'Terraform'
+name: Continuous-Staging (Terraform)
 
 on:
   push:
@@ -86,22 +86,4 @@ jobs:
       run: |
         cd deploy/IAC/ansible-terraform
         terraform fmt --check
-
-    # Generates an execution plan for Terraform
-    - name: Terraform Plan
-      run: |
-        cd deploy/IAC/ansible-terraform
-        terraform plan -input=false
-
-    - name: Install Ansible
-      run: |
-        sudo apt install ansible -y
-        ansible --version
-      # On push to "main", build or change infrastructure according to Terraform configuration files
-      # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
-      #    - name: Terraform Apply
-      #      if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
-      #run: |
-      #  cd deploy/IAC/ansible-terraform
-      #  terraform apply -auto-approve -input=false
 ...
