--- a/.github/workflows/CI-PR.yaml
+++ b/.github/workflows/CI-PR.yaml
@@ -66,7 +66,7 @@ jobs:
         cd ../rotator
         docker build . --target prod --file Dockerfile --tag pdf-editor:$(date +%s)-rotate
         cd ../db
-        docker build . --target prod --file Dockerfile --tag pdf-editor:$(date +%s)-db
+        docker build . --target db-prod --file Dockerfile --tag pdf-editor:$(date +%s)-db
         cd ../../frontend
         docker build . --target prod --file Dockerfile --tag pdf-editor:$(date +%s)-frontend
 
