--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -116,6 +116,13 @@ jobs:
           chmod +x build.sh
           ./build.sh 0
 
+      - name: push all
+        run: |
+          docker push $BACKEND_DATABASE
+          docker push $BACKEND_MERGE
+          docker push $BACKEND_ROTATE
+          docker push $FRONTEND
+
       - name: sign
         run: |
           echo -n "${{secrets.COSIGNPASSWORD}}" | cosign sign --key cosign.key -a git_sha=$GITHUB_SHA $FRONTEND
@@ -132,10 +139,6 @@ jobs:
           cosign verify --key cosign.pub -a git_sha=$GITHUB_SHA $BACKEND_MERGE | jq .
           cosign verify --key cosign.pub -a git_sha=$GITHUB_SHA $BACKEND_ROTATE | jq .
 
-          docker push $BACKEND_DATABASE
-          docker push $BACKEND_MERGE
-          docker push $BACKEND_ROTATE
-          docker push $FRONTEND
 
 # docker build . --file Dockerfile --tag dipugodocker/pdf-editor:0.$(($(date +%m) + 1))-rc
 # docker push dipugodocker/pdf-editor:0.$(($(date +%m) + 1))-rc
