--- a/src/backend/merger/Dockerfile
+++ b/src/backend/merger/Dockerfile
@@ -10,8 +10,8 @@ FROM alpine:3.16.1 as prod
 RUN apk add qpdf
 LABEL MAINTAINER="Dipankar Das <dipankardas0115@gmail.com>"
 WORKDIR /go/src
-COPY --from=prod-stage1 /go/src/templates .
-COPY --from=prod-stage1 /go/src/merger-executable .
+COPY --from=prod-stage1 /go/src .
+RUN rm -f go.sum go.mod file.go main.go main_test.go Dockerfile .dockerignore
 CMD ["./merger-executable"]
 EXPOSE 8080
 
