Improvements to frontend
- non root user in docker image
- curl -> fetch for '/merge/clear'
- TODO: curl -> fetch for '/merge/download' and '/merge/upload'
   Test case fixing

attach Issue #13

Signed-off-by: Dipankar Das <dipsonu10@hotmail.com>

--- a/src/frontend/Dockerfile
+++ b/src/frontend/Dockerfile
@@ -1,4 +1,3 @@
-# FROM golang:1.18-alpine
 FROM node:16-alpine3.15 as prod
 LABEL MAINTAINER="Dipankar Das <dipankardas0115@gmail.com>"
 RUN apk add curl
@@ -6,6 +5,8 @@ WORKDIR /app
 COPY package.json .
 RUN npm install
 COPY . .
+RUN chown 1000 -R /app/
+USER 1000
 CMD [ "node", "server.js" ]
 EXPOSE 80
 
