--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "pdf-editor frontend",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "test": "jest --runInBand --forceExit",
     "start": "node server.js"
@@ -17,6 +18,7 @@
     "express": "^4.18.1",
     "jest": "^28.1.3",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.2.10",
     "path": "^0.12.7",
     "supertest": "^6.2.4"
   }
