--- a/deploy/canary/deploy.yml
+++ b/deploy/canary/deploy.yml
@@ -177,7 +177,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: backend
+  name: backend-merge
   namespace: pdf-editor-ns
 spec:
   selector:
