fix for the canary

--- a/deploy/cluster/pdf-editor-helm/templates/pv.yml
+++ b/deploy/cluster/pdf-editor-helm/templates/pv.yml
@@ -4,7 +4,7 @@ metadata:
   name: pdf-editor-pvc
   labels:
     pvc: pdf
-  namespace: pdf-editor-ns
+  namespace: {{ .Values.namespace }}
 spec:
   accessModes:
     - ReadWriteOnce
