--- a/deploy/policy/limits-pod.yml
+++ b/deploy/policy/limits-pod.yml
@@ -15,7 +15,8 @@ metadata:
       This policy validates that all containers have something specified for memory and CPU
       requests and memory limits.
 spec:
-  validationFailureAction: enforce
+  validationFailureAction: audit
+  # validationFailureAction: enforce
   background: true
   rules:
   - name: validate-resources
