--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "test": "jest --runInBand --forceExit",
+    "test": "node --experimental-vm-modules ./node_modules/.bin/jest --runInBand --forceExit",
     "start": "node server.js"
   },
   "author": "Dipankar Das",
@@ -23,3 +23,4 @@
     "supertest": "^6.2.4"
   }
 }
+
