--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -75,10 +75,10 @@ jobs:
 
     env:
       SUPER_SECRET: ${{ secrets.DOCKER_PASS }}
-      BACKEND_MERGE: dipugodocker/pdf-editor:0.8-backend-merge
-      BACKEND_DATABASE: dipugodocker/pdf-editor:0.8-backend-db
-      BACKEND_ROTATE: dipugodocker/pdf-editor:0.8-backend-rotate
-      FRONTEND: dipugodocker/pdf-editor:0.8-frontend
+      BACKEND_MERGE: dipugodocker/pdf-editor:backend-merge
+      BACKEND_DATABASE: dipugodocker/pdf-editor:backend-db
+      BACKEND_ROTATE: dipugodocker/pdf-editor:backend-rotate
+      FRONTEND: dipugodocker/pdf-editor:frontend
 
     name: Install Cosign and test presence in path
     steps:
