--- a/deploy/cluster/pdf-editor-helm/templates/service.yaml
+++ b/deploy/cluster/pdf-editor-helm/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: backend
+  name: backend-merge
   namespace: {{ .Values.namespace }}
 spec:
   type: {{ .Values.service.type }}
