Added the testing stage in dockerfile for testing the images

--- a/src/backend/merger/Dockerfile
+++ b/src/backend/merger/Dockerfile
@@ -21,10 +21,10 @@ RUN apk add qpdf
 WORKDIR /go/src
 
 
-FROM golang:1.18-alpine as test
-RUN apk update
-RUN apk add qpdf
+FROM golang:1.18 as test
+RUN apt -y update
+RUN apt install -y qpdf
 WORKDIR /go/src
 COPY . .
 RUN go get -d
-ENTRYPOINT ["go", "test", "."]
+ENTRYPOINT ["go", "test", "-v", "."]
