Fixed the templates

--- a/.github/ISSUE_TEMPLATE/Feature.yml
+++ b/.github/ISSUE_TEMPLATE/Feature.yml
@@ -1,5 +1,5 @@
 name: Feature Request
-description: Suggest a/an feature/enhancement to Kubesimplify's website
+description: Suggest a/an feature/enhancement to PDF-Editor
 title: '[FEATURE] <description>'
 labels: ['triage/awaiting', 'enhancement']
 body:
