[Test](Integration) PDF-editor endpoints - Added the endpoint test for /upload, /download - added integration testing to github action as well - added testing to makefile - updated the srs pdf - updated the backend readme and readme

--- a/.github/workflows/CI-PR.yaml
+++ b/.github/workflows/CI-PR.yaml
@@ -50,6 +50,17 @@ jobs:
         cd ../../frontend
         docker build . --target prod --file Dockerfile --tag pdf-editor:$(date +%s)-frontend
 
+  integration-testing:
+    needs: [docker_build]
+    runs-on: ubuntu-latest
+    environment: testing
+    steps:
+    - name: Integration-Testing Merger
+      run: |
+        cd test/integration
+        chmod +x test-merger.sh
+        ./test-merger.sh
+
   # heroku-preview:
   #   needs: [docker_build]
   #   runs-on: ubuntu-latest
