--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -47,8 +47,19 @@ jobs:
         cd ../../frontend
         docker build . --target prod --file Dockerfile --tag pdf-editor:$(date +%s)
 
-  test_cosign_action:
+  integration-testing:
     needs: [docker_build]
+    runs-on: ubuntu-latest
+    environment: testing
+    steps:
+    - name: Integration-Testing Merger
+      run: |
+        cd test/integration
+        chmod +x test-merger.sh
+        ./test-merger.sh
+
+  test_cosign_action:
+    needs: [integration-testing]
 
     runs-on: ubuntu-latest
     environment: preview
