--- a/deploy/IAC/ansible-terraform/ec2-cfg.yml
+++ b/deploy/IAC/ansible-terraform/ec2-cfg.yml
@@ -8,11 +8,5 @@
   - name: Print message
     ansible.builtin.debug:
       msg: Hello from preview runner!!!
-  - name: install docker
-    shell: "sudo apt update -y && sudo apt install docker.io -y"
-
-  - name: fix the permissions
-    shell: "sudo usermod -aG docker ${USER}"
-
-  - name: run container
-    shell: "sudo docker network create pdf ; sudo docker run --rm -d --net pdf -p 80:80 --name pdf dipugodocker/pdf-editor:0.8-frontend && sudo docker run --rm -d --net pdf -p 8080 --name backend dipugodocker/pdf-editor:0.8-backend && docker run -d --name jaeger --net pdf -e COLLECTOR_ZIPKIN_HTTP_PORT=9411 -p 5775:5775/udp -p 6831:6831/udp -p 6832:6832/udp -p 5778:5778 -p 16686:16686 -p 14268:14268 -p 9411:9411 jaegertracing/all-in-one:1.6"
+  - name: Git pull latest updates
+    shell: "cd /home/ubuntu/PDF-Editor/ && git pull origin main && sudo apt -y update"
