[CD/CD](Ansible) fixed the script - fixed the broken script for updating the ec2 instance docker compose

--- a/deploy/IAC/ansible-terraform/ec2-cfg-update.yml
+++ b/deploy/IAC/ansible-terraform/ec2-cfg-update.yml
@@ -10,17 +10,10 @@
       msg: Hello from preview runner!!!
 
   - name: remove the running docker compose
-    shell: |-
-      'cd /home/ubuntu/PDF-Editor/deploy/IAC/ansible-terraform/'
-      'sudo docker-compose down'
-      'sleep 2'
+    shell: 'cd /home/ubuntu/PDF-Editor/deploy/IAC/ansible-terraform/ && docker-compose down && sleep 2'
 
   - name: removing the docker images
-    shell: |-
-      'docker rmi -f $(docker images -q)'
+    shell: 'docker rmi -f $(docker images -q)'
 
   - name: run docker-compose again
-    shell: |-
-      'cd /home/ubuntu/PDF-Editor/deploy/IAC/ansible-terraform/'
-      'sudo docker-compose up -d'
-      'curl -X GET http://localhost/'
+    shell: 'cd /home/ubuntu/PDF-Editor/deploy/IAC/ansible-terraform/ && sudo docker-compose up -d && curl --head -X GET http://localhost/'
