--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -16,6 +16,7 @@
     "cross-env": "^7.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "jest": "^28.1.3",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.2.10",
@@ -23,4 +24,3 @@
     "supertest": "^6.2.4"
   }
 }
-
