--- a/deploy/rollouts/deploy copy.yml
+++ b/deploy/rollouts/deploy copy.yml
@@ -1,7 +1,7 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: pdf-editor-ns
+# apiVersion: v1
+# kind: Namespace
+# metadata:
+#   name: pdf-editor-ns
 
 ---
 
