[K8s](Rollouts) fixed the links
Signed-off-by: Dipankar Das <dipsonu10@hotmail.com>

--- a/deploy/rollouts/deploy copy.yml
+++ b/deploy/rollouts/deploy copy.yml
@@ -98,7 +98,7 @@ spec:
     blueGreen:
       # activeService specifies the service to update with the new template hash at time of promotion.
       # This field is mandatory for the blueGreen update strategy.
-      activeService: backend
+      activeService: backend-merge
       # previewService specifies the service to update with the new template hash before promotion.
       # This allows the preview stack to be reachable without serving production traffic.
       # This field is optional.
