Removal of namespace creation in rollouts

--- a/deploy/rollouts/deploy.yml
+++ b/deploy/rollouts/deploy.yml
@@ -1,9 +1,9 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: pdf-editor-ns
+# apiVersion: v1
+# kind: Namespace
+# metadata:
+#   name: pdf-editor-ns
 
----
+# ---
 
 apiVersion: v1
 kind: Service
